--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>Entertask</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div style="height: 100vh; width: 100vw; background-color: #caffca;">
+        <div style="margin: 0; padding: 0; position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%)">
+          <p style="text-align: center; margin: 0; padding: 0; font-size: 10vw; line-height: 10vw; color: #006600;">Подключение к Entertask</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
