--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,72 @@
 <html lang="ru" id="html">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#006600" />
-    <meta name="description" content="Enterprise tasks" />
+    <meta name="description" content="Корпоративный планировщик рабочего времени" />
+    <meta name="keywords" content="enterprise, tasks, корпоративные, задачи, планирование, рабочего, времени">
+    <meta name="author" content="Беркуль Юрий Эдуардович" lang="ru">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Entertask">
+    <meta property="og:description" content="Корпоративный планировщик рабочего времени.">
+    <meta property="og:url" content="https://entertask.surge.sh/">
+    <meta property="og:image" content="https://entertask.surge.sh/android-chrome-512x512.png">
+    <meta property="og:image:secure_url" content="https://entertask.surge.sh/android-chrome-512x512.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:alt" content="Entertask">
+    <meta property="og:site_name" content="Entertask">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="entertask.surge.sh">
+    <meta property="twitter:url" content="https://entertask.surge.sh/">
+    <meta name="twitter:title" content="Entertask">
+    <meta name="twitter:description" content="Корпоративный планировщик рабочего времени.">
+    <meta name="twitter:image" content="https://entertask.surge.sh/android-chrome-512x512.png">
+    <meta property="twitter:image:src" content="https://entertask.surge.sh/android-chrome-512x512.png">
+    <meta name="apple-mobile-web-app-title" content="Entertask">
+    <meta name="application-name" content="Entertask">
+    <meta name="msapplication-TileColor" content="#006600">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#006600">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>Entertask</title>
+    <script type="application/ld+json"> 
+      {
+        "@context": "http://www.schema.org",
+        "@type": "WebSite",
+        "name": "Entertask",
+        "alternateName": "Entertask",
+        "url": "https://entertask.surge.sh/",
+        "abstract": "Корпоративный планировщик рабочего времени.",
+        "isAccessibleForFree": true,
+        "isFamilyFriendly": false,
+        "keywords": "enterprise, tasks, корпоративные, задачи, планирование, рабочего, времени",
+        "description": "Корпоративный планировщик рабочего времени.",
+        "image": "https://entertask.surge.sh/android-chrome-384x384.png",
+        "offers": {
+          "@type": "Offer",
+          "price": "0"
+        }
+      }
+    </script>
   </head>
   <body style="margin: 0; padding: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
