--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       }
     </script>
   </head>
-  <body style="margin: 0; padding: 0;">
+  <body style="margin: 0; padding: 0; font-family: 'Times New Roman', 'Times CY', 'Nimbus Roman No9 L', Serif;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div style="height: 100vh; width: 100vw; background-color: #caffca;">
